force-app/main/default/objects/Solicita_es_de_faturamento__c/Solicita_es_de_faturamento__c.object-meta.xml
<CustomObject>
    <label>Solicitação de faturamento</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Nome de Solicitações de faturamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitações de faturamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>