force-app/main/default/objects/Solicita_es_de_faturamento__c/fields/cidade__c.field-meta.xml
<CustomField>
    <fullName>cidade__c</fullName>
    <formula>Pedido__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cidade</label>
    <type>Text</type>
</CustomField>