force-app/main/default/objects/Solicita_es_de_faturamento__c/fields/DescEmbalagem__c.field-meta.xml
<CustomField>
    <fullName>DescEmbalagem__c</fullName>
    <label>Descrição da Embalagem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
                <default>true</default>
                <label>Volume</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>