force-app/main/default/objects/Solicita_es_de_faturamento__c/fields/Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Faturamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faturamento</label>
    <referenceTo>Faturamento__c</referenceTo>
    <relationshipLabel>Solicitações de faturamento</relationshipLabel>
    <relationshipName>Solicita_es_de_faturamento</relationshipName>
    <type>Lookup</type>
</CustomField>