force-app/main/default/objects/Solicita_es_de_faturamento__c/fields/Informa_es_Adicionais__c.field-meta.xml
<CustomField>
    <fullName>Informa_es_Adicionais__c</fullName>
    <label>Informações Adicionais</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>