force-app/main/default/objects/Solicita_es_de_faturamento__c/fields/Qtd_Embalagem__c.field-meta.xml
<CustomField>
    <fullName>Qtd_Embalagem__c</fullName>
    <label>Qtd. Embalagem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>