force-app/main/default/objects/Solicita_es_de_faturamento__c/fields/Solicita_o_de_devolu_o__c.field-meta.xml
<CustomField>
    <fullName>Solicita_o_de_devolu_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitação de devolução</label>
    <referenceTo>Solicita_o_de_devolu_o__c</referenceTo>
    <relationshipLabel>Solicitações de faturamento</relationshipLabel>
    <relationshipName>Solicita_es_de_faturamento</relationshipName>
    <type>Lookup</type>
</CustomField>