force-app/main/default/objects/Solicita_es_de_faturamento__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venda</fullName>
            </value>
            <value>
                <fullName>Remessa</fullName>
            </value>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Entrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>