force-app/main/default/objects/Solicita_es_de_faturamento__c/fields/valor_real__c.field-meta.xml
<CustomField>
    <fullName>valor_real__c</fullName>
    <formula>Faturamento__r.Valor_real__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>valor real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>