force-app/main/default/objects/Solicita_es_de_faturamento__c/validationRules/Verifica_pedido_ou_transf.validationRule-meta.xml
<ValidationRule>
    <fullName>Verifica_pedido_ou_transf</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Pedido__c) &amp;&amp; ISBLANK(solicitacao_transferencia_estoque__c)</errorConditionFormula>
    <errorMessage>É necessário preencher pelo menos um dos campos: Pedido ou Solicitação de Transferência de Estoque.</errorMessage>
</ValidationRule>