force-app/main/default/objects/Solicita_es_de_faturamento__c/validationRules/Verifica_Possui_Anexos.validationRule-meta.xml
<ValidationRule>
    <fullName>Verifica_Possui_Anexos</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Finalizado&quot;),
    NOT(Possui_anexos__c),
    DATEVALUE(CreatedDate) &gt;= DATE(2025, 3, 13)
)</errorConditionFormula>
    <errorMessage>A solicitação de faturamento deve possuir anexos. Verifique antes de finalizar.</errorMessage>
</ValidationRule>