force-app/main/default/objects/Solicita_es_de_faturamento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pedido__c</columns>
    <columns>Status__c</columns>
    <columns>Qtd_Embalagem__c</columns>
    <columns>DescEmbalagem__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>