force-app/main/default/objects/Solicita_es_de_faturamento__c/listViews/C_pia_de_Tudo.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Tudo</fullName>
    <columns>NAME</columns>
    <columns>Pedido__c</columns>
    <columns>Status__c</columns>
    <columns>Qtd_Embalagem__c</columns>
    <columns>DescEmbalagem__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Finalizado</value>
    </filters>
    <label>Finalizadas</label>
</ListView>